Added addPerson form and updated index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
 <title>My Homepage</title>
+<script type="JavaScript">
+    function helpMe(){
+        //do some stuff
+        
+    }
+</script>
 </head>
 <body>
 
