--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
+
 <head>
-<title>My Homepage</title>
-<script type="JavaScript">
+    <title>My Homepage</title>
+    <link rel="stylesheet" href="homeStyle.css"/>
+    <script type="JavaScript">
     function helpMe(){
         //do some stuff
-        
+
     }
 </script>
 </head>
-<body>
 
+<body>
+    <h1>Bethany Raymond</h1>
+    <div>Welcome to Bethany's Homepage!!</div>
 </body>
 
 
